# python_template_delme

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
