[project]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = [
    {name = "akuehn",email = "adrian-kuehn@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "python_project_template", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.1.0"

[tool.isort]
profile = "black"
